--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -63,13 +63,13 @@
           </div>
         </div> -->
 
-       <!-- <div class="show_inner">
-        < render 'hotdeals/usa_ver2' >
-       </div> -->
-
        <div class="show_inner">
-        <%= render 'hotdeals/us_kor' %>
+        <% render 'hotdeals/usa_ver2' %>
        </div>
+
+       <!-- <div class="show_inner">
+        < render 'hotdeals/us_kor' >
+       </div> -->
 
         
         <% if can? :update, @hotdeal %>
