--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -64,7 +64,7 @@
         </div> -->
 
        <div class="show_inner">
-        <%= render 'hotdeals/usa_ver2' %>
+        <%= render 'hotdeals/us_kor' %>
        </div>
 
        <!-- <div class="show_inner">
