--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -50,14 +50,14 @@
    <td>https://i.pinimg.com/564x/6b/7b/7b/6b7b7b2f2ee1dde7c896b94d4a9d759f.jpg</td>
   </tr>
   <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
+   <td>Nordstrom</td>
+   <td>https://bit.ly/2jTwmAJ</td>
+   <td>https://i.pinimg.com/564x/76/95/d7/7695d7d56e1bf0f41320dbcd1556ccbb.jpg</td>
   </tr>
   <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
+   <td>Saks Fifth Avenue</td>
+   <td>https://bit.ly/377c89k</td>
+   <td>https://i.pinimg.com/564x/d3/86/76/d386766499a7d01213732ce379dbe70f.jpg</td>
   </tr>
   <tr>
    <td>Site_Name</td>
