--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -44,6 +44,7 @@
     <div class="pricing clearfix">
       <%= f.input :h_spare_68, label: '고시환율' %>
       <%= f.input :h_spare_64, label: '예상 관세 보증금' %>
+      <%= f.input :h_spare_17, label: '예상 배송무게' %>
       <%= f.input :h_spare_65, label: '예상 배송대행지 배송비' %>
       <%= f.input :h_spare_66, label: '관세율 ( 0.08 )' %>
       <%= f.input :h_spare_67, label: '직배송료' %>
