--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -11,6 +11,7 @@
     <div class="pricing clearfix">
       <%= f.input :p_spare_26, label: 'List Price' %>
       <%= f.input :p_spare_27, label: 'Discount Percentage' %>
+      <%= f.input :p_spare_54, label: 'Shipping Fee' %>
     </div>
     <%= f.input :p_image, label: 'Image URL' %>
     <%= f.input :p_link, label: 'Product URL' %>
@@ -26,7 +27,19 @@
       <%= f.input :p_spare_03, label: 'Average Rate' %>
       <%= f.input :p_spare_04, label: 'Number of Reviews' %>
       <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
+      <%= f.input :p_spare_55, label: 'Coupon(%)' %>
+      <%= f.input :p_spare_56, label: 'Coupon($)' %>
       <%= f.input :p_extra_deal, label: 'Extra Deals?' %>
+    </div>
+    <div class="pricing clearfix">
+      <%= f.input :p_spare_57, label: '고시환율' %>
+      <%= f.input :p_spare_58, label: '과세운임' %>
+      <%= f.input :p_spare_59, label: '직배송' %>
+      <%= f.input :p_spare_09, label: '예상 배송부게' %>
+      <%= f.input :p_spare_61, label: '예상 대행 배송비' %>
+      <%= f.input :p_spare_62, label: '관세율' %>
+    </div>
+    <div class="pricing clearfix">
       <%= f.input :p_promocode, input_html: { class: "promo_code" }, label: 'Promo Code' %>
       <%= f.input :p_end_date, input_html: { class: "promo_date" }, label: 'End Date' %>
     </div>
