--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -40,7 +40,7 @@
         </div>
 
         <div class="show_inner">
-          <%= render 'promocodes/usa_ver2' %>
+          <%= render 'promocodes/usa_kor' %>
         </div>
 
         <% if can? :update, @promocode %>
